# avro

./: .asf.yaml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  BUILD.md  BUILD.txt  CHANGELOG.md  CHANGES.md  CHANGES.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DIST_README.txt  Dockerfile  JsonSchema.java  JsonSchemaWalker.java  LICENSE.txt  Makefile  NOTICE.txt  README.md  README.tpl  README.txt  RELEASING.md  SECURITY.md  TODO  TODO.txt  avro.rdf  build.gradle  build.sh  build.xml  circle.yml  classes.txt  composer.json  credits.html  docker-compose.yml  gradle.properties  (+13 more)
branch-1.3/lang/c++/: .gitignore  AUTHORS  Doxyfile  MainPage.dox  Makefile.am  configure.in
branch-1.8/lang/c++/: .gitignore  CMakeLists.txt  Doxyfile
lang/c/: .gitignore  CMakeLists.txt  CPackConfig.txt  ChangeLog  FindJansson.cmake  FindSnappy.cmake  INSTALL  LICENSE  Makefile.am  NEWS  NOTICE  README  README.maintaining_win32.txt  avro_private.c  build.sh  cmake_avrolib.bat  cmake_avrolib.sh  configure.in  version.sh
lang/c++/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  FindSnappy.cmake  LICENSE  MSBUILD.md  MainPage.dox  Makefile.am  Makefile.in  NEWS  README  README.txt  aclocal.m4  avroConfig.cmake.in  build.sh  conanfile.txt  configure  configure.in
lang/c++/api/: AvroParse.hh  AvroSerialize.hh  AvroTraits.hh  Boost.hh  Compiler.hh  CompilerNode.hh  Config.hh  CustomAttributes.hh  CustomFields.hh  DataFile.hh  Decoder.hh  Encoder.hh  Exception.hh  Generic.hh  GenericDatum.hh  InputStreamer.hh  Layout.hh  LogicalType.hh  Node.hh  NodeConcepts.hh  NodeImpl.hh  OutputStreamer.hh  Parser.hh  Reader.hh  Resolver.hh  ResolverSchema.hh  ResolvingReader.hh  Schema.hh  SchemaResolution.hh  Serializer.hh  Specific.hh  Stream.hh  SymbolMap.hh  Types.hh  ValidSchema.hh  ValidatingReader.hh  ValidatingWriter.hh  Validator.hh  Writer.hh  Zigzag.hh
lang/c++/cmake/: AvroConfig.cmake.in  AvroCppConfig.cmake.in  avro-cpp-config.cmake.in  avro-cpp.pc.in
lang/c++/examples/: cpx.hh  cpx.json  custom.cc  datafile.cc  generated.cc  generic.cc  imaginary.hh  resolving.cc  schemaload.cc  validating.cc
lang/c++/impl/: BinaryDecoder.cc  BinaryEncoder.cc  Compiler.cc  CustomAttributes.cc  CustomFields.cc  DataFile.cc  FileStream.cc  Generic.cc  GenericDatum.cc  LogicalType.cc  Node.cc  NodeImpl.cc  Resolver.cc  ResolverSchema.cc  Schema.cc  Stream.cc  Types.cc  ValidSchema.cc  ValidatingReader.cc  ValidatingWriter.cc  Validator.cc  Zigzag.cc  ZstdCodecWrapper.cc  ZstdCodecWrapper.hh  ZstdCompressWrapper.cc  ZstdCompressWrapper.hh  ZstdDecompressWrapper.cc  ZstdDecompressWrapper.hh  avrogencpp.cc
lang/c++/jsonschemas/: bigrecord  bigrecord_r  tweet  union_array_union
lang/c++/m4/: m4_ax_boost_filesystem.m4  m4_ax_boost_thread.m4
lang/c++/parser/: AvroLex.ll  AvroYacc.yy  avro.l
lang/c++/scripts/: gen-cppcode.py
lang/c++/test/: AvailableBytesTests.cc  AvrogencppTestReservedWords.cc  AvrogencppTests.cc  CodecTests.cc  CommonsSchemasTests.cc  CompilerTests.cc  DataFileTests.cc  DecompressionLimitTests.cc  JsonTests.cc  LargeSchemaTests.cc  LogicalTypeTests.cc  SchemaTests.cc  SpecificTests.cc  StreamTests.cc  buffertest.cc  precompile.cc  testgen.cc  testgentest.cc  testparser.cc  unittest.cc
lang/c/datatypes/: array.c  enum.c  fixed.c  float.c  int.c  long.c  primitives.c  union.c
lang/c/docs/: CMakeLists.txt  Makefile.am  index.txt
lang/c/examples/: CMakeLists.txt  Makefile.am  quickstop.c
lang/c/io/: file_container.c  memory.c  socket.c
lang/c/jansson/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
lang/c/json/: json_parser.c  json_tokenizer.c
lang/c/src/: .gitignore  CMakeLists.txt  Makefile.am  allocation.c  allocation.h  allocator.c  allocator.h  allocator_system.c  allocator_system.h  array.c  atom_table.c  avro-c.pc.in  avro.c  avro.h  avro_errors.h  avro_generic_internal.h  avro_private.h  avroappend.c  avrocat.c  avromod.c  avropipe.c  codec.c  codec.h  config.h  consume-binary.c  consumer.c  container_of.h  datafile.c  datum.c  datum.h  datum_equal.c  datum_json.c  datum_read.c  datum_size.c  datum_skip.c  datum_validate.c  datum_value.c  datum_write.c  dump.c  dump.h  (+34 more)
lang/c/tests/: .gitignore  CMakeLists.txt  Makefile.am  dir_iterator.h  generate_interop_data.c  performance.c  test_avro_1034.c  test_avro_1084.c  test_avro_1087.c  test_avro_1167.c  test_avro_1237.c  test_avro_1238.c  test_avro_1379.c  test_avro_1572.c  test_avro_1691.c  test_avro_1904.c  test_avro_1906.c  test_avro_3807.c  test_avro_4135.c  test_avro_4246.c  test_avro_4275.c  test_avro_4279.c  test_avro_4284.c  test_avro_4293.c  test_avro_766.c  test_avro_968.c  test_avro_984.c  test_avro_commons_schema.c  test_avro_data.c  test_avro_decimal_schema.c  test_avro_enum_read.c  test_avro_errors_are_thread_safe.c  test_avro_interop.c  test_avro_schema.c  test_avro_schema_names.c  test_avro_type_collision.c  test_avro_values.c  test_cpp.cpp  test_data_structures.c  test_interop_data.c  (+3 more)
lang/c/util/: avro_type.gperf  dump.h  endian.c  error.h
lang/py/: .gitignore  MANIFEST.in  README.md  build.sh  build.xml  ivy.xml  ivysettings.xml  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
lang/py/avro/: __init__.py  (+16 more)
lang/py3/: .editorconfig  .gitignore  MANIFEST.in  README.md  README.txt  build.sh  setup.cfg  setup.py  tox.ini
lang/rust/: .cargo-rdme.toml  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  build.sh  deny.toml  migration_guide.md  rustfmt.toml
src/c/: .gitignore  Makefile.am  README  avro.c  avro.h  avro_array.c  avro_boolean.c  avro_bytes.c  avro_double.c  avro_endian.c  avro_enum.c  avro_file.c  avro_file_container.c  avro_fixed.c  avro_float.c  avro_int.c  avro_io_file.c  avro_io_memory.c  avro_io_socket.c  avro_long.c  avro_map.c  avro_memory.c  avro_null.c  avro_primitives.c  avro_private.h  avro_raw.c  avro_record.c  avro_socket.c  avro_string.c  avro_union.c  avro_value.c  avro_zigzag.c  configure.in  container_of.h  dump.c  dump.h  error.c  error.h  json.c  json.h  (+15 more)
(+115087 files in other folders)
